yaml-applications/prod/garage-ui/manifest.yaml
---
# Source: garage-ui/templates/secret.yaml
---
# Source: garage-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-ui
  namespace: plannify-2
  labels:
    helm.sh/chart: garage-ui-0.2.5
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-ui
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-ui
---
# Source: garage-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-ui
  namespace: plannify-2
  labels:
    helm.sh/chart: garage-ui-0.2.5
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-ui
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: garage-ui
      app.kubernetes.io/instance: garage-ui
  template:
    metadata:
      annotations:
        checksum/config: b9321f8d0f7fa279f6313f68b0a7d1a023b1fa12f7868658a34d7fd54fa69153
      labels:
        app.kubernetes.io/name: garage-ui
        app.kubernetes.io/instance: garage-ui
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: garage-ui
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
        image: "noooste/garage-ui:v0.4.2"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
        volumeMounts:
        - name: config
          mountPath: /app/config.yaml
          subPath: config.yaml
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: garage-ui-config
---
# Source: garage-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ui
  namespace: plannify-2
  labels:
    helm.sh/chart: garage-ui-0.2.5
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-ui
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-plannify
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "garage-ui.plannify.be"
      secretName: garage-ui-tls
  rules:
    - host: "garage-ui.plannify.be"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-ui
                port:
                  number: 80
---
# Source: garage-ui/templates/secret.yaml
---
